 * Generated PostScript files are now more than 50% smaller.
 * Terminal rendering of eqn(7) is improved in several respects.
 * Simplified and nicer output from the mdoc(7) .Lk macro, formatting
   all links in-line, even long ones.
 * roff(7) \n+ and \n- numerical register auto-increment and -decrement
 * roff(7) .nr optional third argument (auto-increment step size)
    --- RELIABILITY BUGFIXES ---
 * Only activate UTF-8 output when the user really selected UTF-8,
   not some other multibyte character encoding.
 * Prevent excessive .ll arguments from generating infinite output.
 * Avoid an assertion failure in certain .Bl -column lists.
 * Avoid a NULL pointer access on deroff() failure after '.SS ""'.
 * Fix a segfault that could be triggered by two invalid .Dt macros.
 * Fix two syntax errors in generated PDF files.
 * Properly state the page size in generated PostScript files.
 * Close a memory leak caused by missing gzclose(3).
 * Fix misformatting of man(7) documents lacking .SH macros
   in PostScript and PDF output.
 * And many minor bugfixes.
    --- THANKS TO ---
 * Marc Espie (OpenBSD) for implementing the size reduction of
   PostScript files, one additional patch for code simplification,
   and two bug reports.
 * Theo Buehler (OpenBSD) for a bugfix patch,
   and Theo de Raadt (OpenBSD) for checking it.
 * John Gardner for more than a dozen suggestions regarding HTML output.
 * Mike Williams for teaching me how to use %%DocumentMedia and
   setpagedevice in PostScript files.
 * Werner Lemberg (groff) for feedback on mdoc(7) language changes.
 * Colin Watson (man-db) for feedback on man-db semantics.
 * Jason McIntyre (OpenBSD) for lots of feedback and suggestions
   on diagnostic messages and on the documentation.
 * Thomas Klausner (NetBSD) for suggesting two new style messages,
   one new feature, and for two bug reports.
 * Leah Neukirchen (Void Linux) for suggesting a new style message
   and for two bug reports.