@@ -1,0 +1,5 @@
+int
+main(void)
+{
+	return 0;
+}
